--- a/src/styles/MobileHeader.scss
+++ b/src/styles/MobileHeader.scss
@@ -5,10 +5,12 @@
     display: flex;
     justify-content: space-between;
     position: relative;
-    height: 80px;
-    padding: 1em 0;
+    height: 70px;
+    padding-top: 1em;
+    border-bottom: $border;
     background-color: $background-color;
-    &__logo{
+
+    &__logo {
         padding: 0 1em;
         width: 200px;
     }
