--- a/src/styles/Especialidades.scss
+++ b/src/styles/Especialidades.scss
@@ -18,6 +18,9 @@
     gap: 10px;
     padding-bottom: 10px;
   }
+  &__box--reverse{
+    flex-direction: column-reverse;
+  }
   &__box--img {
     width: 300px;
     height: 300px;
