--- a/src/styles/DropdownMenu.scss
+++ b/src/styles/DropdownMenu.scss
@@ -7,7 +7,7 @@
   top: 0;
   right: 100vw;
   width: 100vw;
-  height: 100vh;
+  height: 725px;
   background-color: $background-color;
   z-index: 999;
   transition: right 1.5s;
