--- a/src/styles/Especialidades.scss
+++ b/src/styles/Especialidades.scss
@@ -52,7 +52,7 @@
   @include mobile_s {
     .title{
       text-align: center;
-      padding: 20px;
+      padding: 30px 20px;
       font-size: 3em;
     }
   } 
