--- a/src/styles/FormContact.scss
+++ b/src/styles/FormContact.scss
@@ -2,7 +2,7 @@
 
 .formContact {
   font-size: $generalFont;
-  margin: 0 auto;
+  margin: 20px auto;
   width: 50vw;
   min-width: 300px;
   height: 500px;
