FIX margin video

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -54,6 +54,7 @@
     overflow: hidden;
     min-height: max-content;
     max-height: 73vh;
+    margin-bottom: 30px;
 
     &--src {
       top: 0;
