FIX drop down menu and footer styles and functionality

--- a/src/styles/DropdownMenu.scss
+++ b/src/styles/DropdownMenu.scss
@@ -25,12 +25,42 @@
     justify-content: flex-start;
     margin-left: 8px;
   }
+  a{
+/*      font-size: 1.5em;
+ */     color: black;
+    &:hover {
+      text-decoration: underline $base-color;
+    }
+
+  }
+  &__a--mail{
+    font-size: 1.5em;
+    color: black;
+    font-weight: 500;
+    margin-left: -10px;
+   &:hover {
+     text-decoration: underline $base-color;
+   }
+  } 
 
   &__links {
     padding-top: 20px;
     font-size: 1.5em;
     color: black;
+    &:hover {
+      text-decoration: underline $base-color;
+    }
   }
+  &__links--inactive{
+    &:hover{
+      text-decoration: none;
+    }
+  }
+  /* &__links {
+    &:hover{
+      font-weight: initial;
+    } 
+  }*/
   &__button {
     position: absolute;
     top: 0.7em;
