--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -11,7 +11,7 @@
   border-top: $border;
   flex-wrap: wrap;
   margin-top: 20px;
-  
+
   @include tablet {
     flex-direction: row;
     align-content: inherit;
@@ -21,7 +21,7 @@
     img {
       width: 50px;
     }
-    p{
+    p {
       font-weight: 800;
     }
     text-align: center;
@@ -40,7 +40,7 @@
     flex-direction: column;
     align-items: center;
   }
-
+  /* EL COLOR QUE QUIERO */
   &__li {
     padding: 0.1em 0;
     cursor: pointer;
@@ -54,6 +54,13 @@
       cursor: inherit;
       &:hover {
         text-decoration: none;
+      }
+    }
+    a {
+      padding: 0.1em 0;
+      cursor: pointer;
+      &:hover {
+        text-decoration: underline $base-color;
       }
     }
     &__p {
@@ -71,11 +78,11 @@
   }
 
   &__links {
-    &:hover{
+    &:hover {
       font-weight: initial;
     }
   }
-  &__mail{
+  &__mail {
     display: flex;
     flex-direction: row;
     gap: 10px;
@@ -88,10 +95,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-  
+
     gap: 0.3em;
 
-    p{
+    p {
       font-weight: 600;
     }
   }
