--- a/src/styles/CuadroMedico.scss
+++ b/src/styles/CuadroMedico.scss
@@ -2,11 +2,17 @@
 
 .doctor {
     padding: 50px;
-
+    background-color: aquamarine;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    
+    /* INPUT SEARCH */
     &__search{
         display: flex;
         justify-content: center;
         padding: 20px;
+        background-color: crimson;
         
         input{
             width: 250px;
@@ -22,8 +28,15 @@
             color: black;
         }
     }
-
+    /* CONTAINER DOCTOR CARDS */
     &__cards {
-        gap: 100px;
+/*         gap: 20px;
+ */        background-color: pink;
+        display: flex;
+        width: 300px;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+
     }
 }
