FEAT: added styles in appointments

--- a/src/styles/AreaCliente.scss
+++ b/src/styles/AreaCliente.scss
@@ -4,6 +4,10 @@
     text-align: center;
     gap: 20px;
 
+    &__nav{
+        padding: 10px;
+    }
+
     &__links{
         padding: 10px;
     }
