--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -3,13 +3,15 @@
 .header {
   width: 100%;
   padding-top: 0.7em;
-  margin: 0 auto;
   display: none;
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
   border-bottom: $border;
-  
+  background-color: #f4f3ef;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 
   &__logo {
     margin: 0;
@@ -30,6 +32,7 @@
 
   @include tablet {
     display: flex;
+    z-index: 9999;
   }
   
   &__svg {
