--- a/src/styles/MobileHeader.scss
+++ b/src/styles/MobileHeader.scss
@@ -4,7 +4,9 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    position: relative;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
     height: 70px;
     padding-top: 1em;
     border-bottom: $border;
