FEAT styles at areadiagnostica button funcionality and styles  at specttemplate

--- a/src/styles/Centro.scss
+++ b/src/styles/Centro.scss
@@ -18,8 +18,9 @@
         }
 
         &--info{
-            font-size: 24px;
-            padding-bottom: 10px;
+            font-size: 20px;
+            padding-top: 10px;
+            text-align: justify;
           
         }
     }
