--- a/src/styles/SpecsTemplate.scss
+++ b/src/styles/SpecsTemplate.scss
@@ -1,15 +1,61 @@
-.specs{
+@import "./Schema.scss";
+
+.specsTemplate {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+
+  &__title {
+    text-align: center;
+    padding: 30px 20px;
+  }
+
+  &__container {
+    margin-bottom: 20px;
     display: flex;
-    justify-content: space-between;
-    gap: 30px;
-    width: 60%;
-    margin: 0 auto;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 300px;
+    padding: 0px 20px;
+  }
 
-    img{
-        width: 40%;
-    }
+  &__container--img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+  }
 
-    p{
-        font-size: 1.2rem;
-    }
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+
+  &__p {
+    margin-top: 30px;
+    padding: 20px 0px 0px 0px;
+    text-align: justify;
+    line-height: 1.3em;
+    border-top: 2px solid $base-color;
+  }
+  @include mobileLandscape {
+    &__container {
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 20px;
+        width: 700px;
+      }
+      &__p {
+        width: 300px;
+        border-top: none;
+        padding: 0px;
+        margin-top: 0px;
+
+
+      }
+  }
 }
