--- a/src/styles/Cookies.scss
+++ b/src/styles/Cookies.scss
@@ -10,6 +10,7 @@
     padding: 10px;
     z-index: 9999;
     background-color: $base-color;
+    color: white;
 
     &__title{
         display: flex;
@@ -18,6 +19,7 @@
         height: 35px;
         img{
             width: 20px;
+            filter: invert(100);
         }
         h3{
             font-weight: 600;
