--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -102,4 +102,36 @@
       font-weight: 600;
     }
   }
+
+  .subFooter{
+    width: 100%;
+    
+     &__ul{
+      border-top: $border;
+      text-align: center;
+      
+      li{
+        margin: 5px 0;
+      }
+
+      @include tablet {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 6rem;
+        margin: 0;
+      }
+
+        li:hover{
+          text-decoration: underline $base-color;
+        }
+
+        .right{
+        margin-left: 12rem;
+        }
+     }
+
+     
+
+  }
 }
