--- a/src/styles/Schema.scss
+++ b/src/styles/Schema.scss
@@ -13,7 +13,6 @@ $generalFont: 16px;
 }
 
 .primary_button {
-  border: none;
   border-radius: 25px;
   padding: 0.52em 2em;
   margin: 1em 0;
@@ -24,10 +23,22 @@ $generalFont: 16px;
   border: 1px solid $base-color;
   transition: ease-in 500ms;
 
+  &:hover{
+    color: $background-color;
+    background-color: $base-color;
+    transition: ease-in 500ms;
+  }
+
   &:valid {
     color: white;
     background-color: $base-color;
     border: 1px solid $secondary-color;
+
+    &:hover{
+      color: $base-color;
+      background-color: white;
+      transition: ease-in 500ms;
+    }
   }
 }
 
