FIX: change text color on input file

--- a/src/styles/FormAppointment.scss
+++ b/src/styles/FormAppointment.scss
@@ -79,6 +79,11 @@
     .fakeButton{
     font-size: 0.9em;
     padding: 0.4em 0.8em;
+    color: black;
+    }
+
+    .fakeButton:hover{
+      color: white;
     }
   }
 }
