--- a/src/styles/Authors.scss
+++ b/src/styles/Authors.scss
@@ -1,13 +1,12 @@
 @import "./Schema.scss";
 
 .authors {
-/*     background-color: aqua;
- */    display: flex;
-    width: 100%;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-   
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
   &__p {
     padding: 0 20px;
     text-align: justify;
@@ -30,11 +29,11 @@
     flex-direction: column;
     align-items: center;
   }
-  &__container--img{
-      width: 190px;
-      height: 190px;
-      margin: 10px;
-      object-fit: cover;
+  &__container--img {
+    width: 190px;
+    height: 190px;
+    margin: 10px;
+    object-fit: cover;
   }
   &__img {
     height: 100%;
@@ -42,7 +41,7 @@
     object-fit: cover;
     border-radius: 50%;
   }
-  &__info{
+  &__info {
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -51,28 +50,66 @@
     align-items: center;
   }
 }
-/* 
-@include desktop {
-    .authors {
+
+@include tablet {
+  .authors {
+    &__container {
       display: flex;
-      border-radius: 16px;
-      margin: 20px 0;
-      border: 3px solid $base-color;
-      width: 600px;
-      height: 300px;
-      justify-content: center;
-      flex-direction: row;
+    width: 100%;
+    height: 85vh;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    gap: 35px;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    }
+    &__card {
+       display: flex;
+    border-radius: 16px;
+    border: 3px solid $base-color;
+    width: 420px;
+    height: 270px;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    gap: 0px;
+    padding: 0; 
+    margin: 0;
+    }
+    &__container--img {
+      width: 250px;
+      height: 250px;
+      margin: 10px;
+      object-fit: cover;
+      display: flex;
       align-items: center;
-      gap: 35px;
-  
-      &__info {
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 10px;
-        align-items: flex-start;
+      justify-content: center;
+    }
+
+    &__img {
+      width: 200px;
+      height: 200px;
+    }
+
+    &__info {
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 10px;
+      align-items: flex-start;
+      width: 150px;
+    }
+    &__p {
+      text-align: left;
+      padding: 0;
+    }
+    a {
+      text-align: left;
+      &:hover {
+        text-decoration: underline $base-color;
       }
     }
   }
- */
+}
