--- a/src/styles/DropdownMenu.scss
+++ b/src/styles/DropdownMenu.scss
@@ -5,13 +5,14 @@
   flex-direction: column;
   position: absolute;
   top: 0;
+  opacity: 0;
   right: 100vw;
-  width: 100vw;
-  height: 725px;
+  width: 100%;
+  height: 100vh;
   background-color: $background-color;
   z-index: 999;
-  transition: right 1.5s;
-  box-shadow: 0px 15px 10px -15px #111;  
+  transition: all 1.5s;
+  box-shadow: 0px 15px 10px -15px #111;
 
   &__logo {
     padding: 15px 0;
@@ -25,23 +26,21 @@
     justify-content: flex-start;
     margin-left: 8px;
   }
-  a{
-/*      font-size: 1.5em;
- */     color: black;
+  a {
+    color: black;
     &:hover {
       text-decoration: underline $base-color;
     }
-
   }
-  &__a--mail{
+  &__a--mail {
     font-size: 1.5em;
     color: black;
     font-weight: 500;
     margin-left: -10px;
-   &:hover {
-     text-decoration: underline $base-color;
-   }
-  } 
+    &:hover {
+      text-decoration: underline $base-color;
+    }
+  }
 
   &__links {
     padding-top: 20px;
@@ -51,16 +50,13 @@
       text-decoration: underline $base-color;
     }
   }
-  &__links--inactive{
-    &:hover{
+
+  &__links--inactive {
+    &:hover {
       text-decoration: none;
     }
   }
-  /* &__links {
-    &:hover{
-      font-weight: initial;
-    } 
-  }*/
+
   &__button {
     position: absolute;
     top: 0.7em;
@@ -124,7 +120,8 @@
   }
 }
 
-.active--menu{
-  width: 100%;
+.active--menu {
+  opacity: 1;
+  min-height: max-content;
   right: 0;
 }
