--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -152,6 +152,7 @@
       font-size: 3vw;
       color: black;
       text-transform: uppercase;
+      background-color: white;
 
       @include mobile {
         top: 72%;
@@ -161,7 +162,7 @@
       @include tablet {
         font-size: 2.4vw;
         text-align: center;
-        top: 80%;
+        top: 76%;
         left: 0;
         right: 0;
         text-transform: capitalize;
