FIX styles subfooter

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -126,7 +126,7 @@
       @include tablet {
         width: 50%;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         margin: 0;
       }
 
