--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -5,6 +5,7 @@
   font-size: $generalFont;
 
   &__videomessage{
+   
     @include tablet {
       display: flex;
       justify-content: center;
@@ -168,10 +169,15 @@
         font-size: 2vw;
       }
 
+      @include mobileLandscape {
+        top: 60%;
+        font-size: 2vw;
+      }
+
       @include tablet {
         font-size: 2.4vw;
         text-align: center;
-        top: 72%;
+        top: 75%;
         left: 0;
         right: 0;
         text-transform: capitalize;
