FIX appoinments bug, ADD button loggout style, button pedir cita FEAT area cliente, redux patients

--- a/src/styles/PedirCita.scss
+++ b/src/styles/PedirCita.scss
@@ -2,21 +2,18 @@
 
 .pedirCita{
     font-size: $generalFont;
-    margin: 0 auto;
     text-align: center;
     padding: 1em;
     
     h4{
-        padding-top: 0.5em;
+        /* padding-top: 0.5em; */
     }
     p{
-        padding-top: 0.3em;
+        /* padding-top: 0.3em; */
     }
 }
 
-.citaUser{
-
-    &__title{
-        text-align: center;
-    }
+.pedir_cita{
+    text-align: center;
+    padding: 0;
 }
