--- a/src/styles/Schema.scss
+++ b/src/styles/Schema.scss
@@ -7,6 +7,13 @@ $unactive: #9b9b9b;
 
 $generalFont: 16px;
 
+.loader {
+    padding: 50px;
+    width:80px;
+    display: block;
+    margin: auto;
+}
+
 .title {
   text-align: center;
   padding: 30px 20px;
