--- a/src/styles/Appointments.scss
+++ b/src/styles/Appointments.scss
@@ -1,5 +1,6 @@
 @import "Schema.scss";
 
+
 .appointments{
     display: flex;
     flex-direction: column;
@@ -22,4 +23,8 @@
         }
     }
 
+}
+
+.noAppointments{
+    text-align: center;
 }
