--- a/src/styles/FormAppointment.scss
+++ b/src/styles/FormAppointment.scss
@@ -14,7 +14,7 @@
   font-size: 16px;
   width: 50vw;
   min-width: 300px;
-  height: 410px;
+  height: 500px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -35,7 +35,7 @@
     align-items: center;
     width: calc(50vw - 5px);
     min-width: 295px;
-    height: 407px;
+    height: 496px;
     background-color: $background-color;
     z-index: 2;
     border-radius: 25px;
@@ -47,6 +47,7 @@
     h2 {
       font-size: 2em;
       padding-top: 0.5em;
+      padding-bottom: 0.5em;
     }
 
     p {
@@ -55,7 +56,7 @@
 
     label {
       font-size: 1.2em;
-      padding: 0.2em 0;
+      padding-bottom: 0.2em;
       font-weight: 600;
 
       @include tablet {
@@ -66,6 +67,9 @@
     input {
       width: 50%;
       min-width: 35vw;
+      border: 2px solid $base-color;
+      border-radius: 16px;
+      background-color: $background-color;
 
       &[type="file"] {
         display: none;
@@ -76,10 +80,19 @@
         min-width: unset;
       }
     }
+
+    select{
+      margin: 0.8em 0;
+
+      border-radius: 16px;
+      border: 2px solid $base-color;
+    }
     .fakeButton{
     font-size: 0.9em;
-    padding: 0.4em 0.8em;
+    padding: 0.2em 0em;
     color: black;
+    margin-left: -1em;
+    margin-right: -1em;
     }
 
     .fakeButton:hover{
@@ -96,7 +109,7 @@
   left: -50%;
   width: 50vw;
   min-width: 300px;
-  height: 396px;
+  height: 500px;
   transform-origin: bottom right;
   background: linear-gradient(0deg, transparent, $base-color, $base-color);
   animation: formAnimate 8s linear infinite;
@@ -114,7 +127,7 @@
   left: -50%;
   width: 50vw;
   min-width: 300px;
-  height: 400px;
+  height: 500px;
   transform-origin: bottom right;
   background: linear-gradient(0deg, transparent, $base-color, $base-color);
   animation: formAnimate 8s linear infinite;
